<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TukKantuk</string>
    <string name="enter_email">Enter your email</string>
    <string name="name">name</string>
    <string name="deskripsi">deskripsi\n</string>
    <string name="camera_permission_request_granted">Camera Request Granted</string>
    <string name="camera_permission_request_denied">Camera Request Denied</string>
    <string name="upload">Unggah</string>
    <string name="description_text">description text</string>
    <string name="gallery">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="upload_gagal">Upload Gagal</string>
    <string name="empty_image">Empty Image</string>
    <string name="empty_data">Empty Data</string>
    <string name="berhasil_keluar">Berhasil Keluar</string>
    <string name="title_welcome_page">Welcome to TukKantuk!</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="login_berhasil">Login Berhasil</string>
    <string name="login_gagal">Login Gagal: Email Belum Terdaftar atau Tidak Valid</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="error_password">Password Salah!</string>
    <string name="enter_password">Masukkan Password!</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="message_login_page">Login Dulu</string>
    <string name="title_login">Log In</string>
    <string name="title_register">Register</string>
    <string name="register_berhasil">Berhasil Register</string>
    <string name="register_gagal">Gagal Register: Email Sudah Pernah Digunakan atau Tidak Valid</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="camera_x">Monitor Kondisi Mengemudimu</string>
    <string name="default_web_client_id">Default Web Client</string>
    <string name="fokus">Fokus</string>
    <string name="tidakfokus">Tidak Fokus</string>
    <string name="retry">Try Again</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="channel_name">New Story</string>
    <string name="channel_description">Ada driver yang ngantuk, nih!</string>
    <string name="notification_subtext">Ada driver yang mengantuk, nih!</string>
    <string name="laporkankondisi">Berhentilah jika mengantuk. Laporkan kondisimu supaya driver lain bisa menggantikan!</string>
    <string name="all_permissions_granted">All Permissions Granted</string>
    <string name="permissions_denied">Permissions Denied</string>
    <string name="location_permission_required">Location Permission Required</string>
</resources>